--- a/pom.xml
+++ b/pom.xml
@@ -16,4 +16,14 @@
     <maven.compiler.target>14</maven.compiler.target>
   </properties>
 
+  <dependencies>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>4.0.1</version>
+      <scope>provided</scope>
+    </dependency>
+    
+  </dependencies>
+
 </project>
