1. CandidateSerlvet. Создание кандидата.[2513#289775]

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,4 +12,14 @@
         <servlet-name>PostServlet</servlet-name>
         <url-pattern>/post/save</url-pattern>
     </servlet-mapping>
+
+    <servlet>
+        <servlet-name>CandidateServlet</servlet-name>
+        <servlet-class>ru.job4j.dream.servlet.CandidateServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>CandidateServlet</servlet-name>
+        <url-pattern>/candidate/save</url-pattern>
+    </servlet-mapping>
+
 </web-app>
