--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
       <version>1.4</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/taglibs/standard -->
+    <dependency>
+      <groupId>taglibs</groupId>
+      <artifactId>standard</artifactId>
+      <version>1.1.2</version>
+    </dependency>
 
   </dependencies>
 
