--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -82,6 +82,15 @@
     </filter-mapping>
 
     <servlet>
+        <servlet-name>RegServlet</servlet-name>
+        <servlet-class>ru.job4j.dream.servlet.RegServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>RegServlet</servlet-name>
+        <url-pattern>/reg.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>Hello</servlet-name>
         <servlet-class>ru.job4j.dream.test.HelloServlet</servlet-class>
     </servlet>
