--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -145,4 +145,8 @@
         <url-pattern>/city</url-pattern>
     </servlet-mapping>
 
+    <welcome-file-list>
+        <welcome-file>auth.do</welcome-file>
+    </welcome-file-list>
+
 </web-app>
