--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,25 @@
 
 <web-app>
 
+    <filter>
+        <filter-name>CorsFilter</filter-name>
+        <filter-class>ru.job4j.dream.filter.CORSFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>CorsFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter>
+        <filter-name>AuthFilter</filter-name>
+        <filter-class>ru.job4j.dream.filter.AuthFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>AuthFilter</filter-name>
+        <url-pattern>*.do</url-pattern>
+    </filter-mapping>
+
     <display-name>Archetype Created Web Application</display-name>
 
     <servlet>
@@ -71,16 +90,6 @@
         <servlet-name>AuthServlet</servlet-name>
         <url-pattern>/auth.do</url-pattern>
     </servlet-mapping>
-
-    <filter>
-        <filter-name>AuthFilter</filter-name>
-        <filter-class>ru.job4j.dream.filter.AuthFilter</filter-class>
-    </filter>
-
-    <filter-mapping>
-        <filter-name>AuthFilter</filter-name>
-        <url-pattern>*.do</url-pattern>
-    </filter-mapping>
 
     <servlet>
         <servlet-name>RegServlet</servlet-name>
